Fix more minor style glitches
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@788 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -54,6 +54,7 @@
 }
 .diff #legend h3 { display: none; }
 .diff #legend dt {
+ background: #fff;
  border: 1px solid #999;
  float: left;
  margin: .1em .5em .1em 2em;
