* Use headings instead of captions in report and milestone view. Fixes #600. * Cleanup the form for adding/modifying milestones. Associated tickets are   now always updated when the name of a milestone is changed (no longer   optional). * Fix milestone/roadmap layout bugs in IE/Win * Various other minor style fixes
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@810 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -109,6 +109,9 @@ h1 .sep { color: #666; padding: 0 .1em }
 }
 #dirlist td.change * { font-size: 9px }
 
+/* Styles for the HTML preview */
+#preview { background: #fff }
+
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist td.date { white-space: nowrap }
