--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -65,7 +65,7 @@ legend {
  background: #fff;
  color: #d7d7d7;
  padding: 0 .25em;
- font-size: 75%;
+ font-size: smaller;
  font-weight: bold;
 }
 form.inline { float: left }
@@ -165,7 +165,7 @@ form.inline input { margin: 1em }
 #altlinks h3 { font-size: 12px; letter-spacing: normal; margin: 0 }
 #altlinks ul { margin: 0; padding: 0 0 1em }
 #altlinks li {
- border-right: 1px solid black;
+ border-right: 1px solid #d7d7d7;
  display: inline;
  font-size: 11px;
  list-style-type: none;
@@ -232,7 +232,7 @@ a.missing:hover { color: #000; }
  border: 1px solid #d7d7d7;
  border-left: none;
  float: left;
- margin: 0 2px 2px;
+ margin: 5px 2px 0;
  height: 18px;
 }
 #wikitoolbar a {
@@ -262,14 +262,6 @@ table.listing {
  border-spacing: 0;
  margin-top: 1em;
  width: 100%;
-}
-table.listing caption {
- background: #f7f7f7;
- border-bottom: 1px solid #d7d7d7;
- font-weight: bold;
- margin: 0 0 1em;
- font-size: 14px;
- text-align: left;
 }
 table.listing th {
  text-align: left;
