Fixed type that would make the ticket icon disappear form the timeline on hover
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@811 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -43,7 +43,7 @@
 .timeline dt.changeset, .timeline dt.changeset a {
  background-image: url(../changeset.png);
 }
-.timeline dt.newticket, .timeine dt.newticket a {
+.timeline dt.newticket, .timeline dt.newticket a {
  background-image: url(../newticket.png);
 }
 .timeline dt.closedticket, .timeline dt.closedticket a {
