Fix wiki toolbar layout/placement problems for ''edit ticket'' description field. Closes #555.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@821 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -252,6 +252,7 @@ a.missing:hover { color: #000; }
 #wikitoolbar a#link { background-position: 0 -48px }
 #wikitoolbar a#code { background-position: 0 -64px }
 #wikitoolbar a#hr { background-position: 0 -80px }
+br#wikitoolbar-break { clear: left; }
 
 /* Styles for tabular listings such as those used for displaying directory
    contents and report results. */
