Never allow docutils to sys.exit due to ReST syntax errors, but handle all errors gracefully. Show ReST errors styled like other error messages. Closes #587.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@826 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -297,14 +297,17 @@ table.wiki {
 table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #wiki-edit-page:hover { background: #ccb }
 
-/* Styles for the error page */
-#content.error .message {
+/* Styles for the error page (and rst errors) */
+#content.error .message, div.system-message {
  background: #fdc;
  border: 2px solid #d00;
  color: #500;
  padding: .5em;
  margin: 1em 0;
 }
+
+div.system-message p { margin: 0; }
+div.system-message p.system-message-title { font-weight: bold; }
 
 /* Styles for search word highlighting */
 .searchword0 { background: #ff9 }
