Fixed erroneous style. Fixes #644. Thanks, dju'
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@829 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -121,7 +121,7 @@
 /* .pl_commentline { color: green; font-style: italic; } */
 .pl_datasection { color: olive; }
 /* .pl_default { } */
-.pl_error { color: red; font-style: bold; }
+.pl_error { color: red; font-weight: bold; }
 .pl_hash { color: black; }
 .pl_here_delim { color: olive; }
 .pl_here_q { color: olive; }
