Removed redundancy/typo in css. Closes #647.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@830 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -5,7 +5,7 @@ body {
  font: normal 13px verdana,arial,'Bitstream Vera Sans',helvetica,sans-serif;
  margin: 10px;
 }
-h1, h1, h2, h3, h4 {
+h1, h2, h3, h4 {
  font-family: arial,verdana,'Bitstream Vera Sans',helvetica,sans-serif;
  font-weight: bold;
  letter-spacing: -0.018em;
