Applied a few patches from Tony Brkic, many thanks!
 * Added verilog syntax coloring support. Closes #606.
 * Various enhancements of the restructured text processor, closes #635, #649, #650, #655.



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@847 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -180,3 +180,17 @@
 .yaml_keyword { color: #880088; }
 .yaml_number { color: #880000; }
 .yaml_reference { color: #008888; }
+.v_comment { color: gray; font-style: italic; }
+.v_commentline { color: red; font-style: italic; }
+.v_commentlinebang { color: red; font-style: italic; }
+.v_default { }
+.v_identifier { color: black; }
+.v_number { color: #009999; }
+.v_operator{color: black;}
+.v_preprocessor{color: #009999;}
+.v_string{color: olive;}
+.v_stringeol{color: olive;}
+.v_user{ color: blue; font-weight: bold; }
+.v_word { color: navy; font-weight: bold; }
+.v_word2 { color: green; font-weight: bold; }
+.v_word3{color: navy;font-weight: bold; }
