Fix a layout problem in the timeline introduced with [863]. Also fixed an unrelated typo in {{{trac.css}}}.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@866 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -30,7 +30,7 @@
  font-weight: bold;
  padding-right: .25em;
  position: absolute;
- left: 0;
+ left: 10px;
  text-align: right;
  width: 7.75em;
 }
