--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -1,24 +1,5 @@
 /* Diff preferences */
-#prefs {
- background: #f7f7f0;
- border: 1px outset #998;
- float: right;
- font-size: 9px;
- padding: .8em;
- margin: 0 1em 1em;
- width: 26em;
-}
-#prefs input, #prefs select { font-size: 9px; vertical-align: middle }
-#prefs fieldset { border: none; margin: 1em .5em .5em; padding: .5em 1em 0 }
-#prefs fieldset legend {
- background: transparent;
- color: #000;
- font-size: 9px;
- font-weight: normal;
- margin: 0 0 0 -1.5em;
- padding: 0;
-}
-#prefs .buttons { text-align: right }
+#prefs fieldset { margin: 1em .5em .5em; padding: .5em 1em 0 }
 
 /* Diff/change overview */
 #overview {
