--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -1,57 +1,30 @@
 /* Timeline */
-.timeline #prefs {
- background: #f7f7f0;
- border: 1px outset #998;
- float: right;
- font-size: 9px;
- padding: .8em;
- margin: 0 1em 1em;
- width: 36em;
-}
-.timeline #prefs input { font-size: 9px; vertical-align: middle }
-.timeline #prefs fieldset { border: 0; margin: .5em; padding: 0 }
-.timeline #prefs .buttons { text-align: right; margin-top: -1.6em }
+#prefs { width: 36em }
+#prefs .buttons { margin-top: -1.6em }
 
-.timeline h2 {
- background: #f7f7f7;
- border-bottom: 1px solid #d7d7d7;
- font-size: 105%;
-}
-.timeline dl { line-height: 130%; margin-left: 1em }
-.timeline dt { background: 4px 50% no-repeat; padding: 1px }
-.timeline dt em {
+h2 { background: #f7f7f7; border-bottom: 1px solid #d7d7d7; font-size: 105% }
+dl { line-height: 130%; margin-left: 1em }
+dt { background: 4px 50% no-repeat; padding: 1px }
+dt em {
  border-bottom: 1px dotted #bbb;
  color: #b00;
  font-style: normal;
  text-decoration: none;
 }
-.timeline dt .time { color: #777 }
-.timeline dt :link, .timeline dt :visited {
+dt .time { color: #777 }
+dt :link, dt :visited {
  background: transparent 3px 50% no-repeat;
  display: block;
  border: none;
  color: #000;
  padding: 0 2px 2px 22px;
 }
-.timeline dt :link:hover, .timeline dt :visited:hover {
- background-color: #eed;
- color: #000;
-}
-.timeline dd { font-size: 80%; margin: 0 0 .5em 5em; padding: 0 }
+dt :link:hover, dt :visited:hover { background-color: #eed; color: #000 }
+dd { font-size: 80%; margin: 0 0 .5em 5em; padding: 0 }
 
 /* Apply icon background-image twice to avoid hover-flicker in IE/Win */
-.timeline dt.changeset, .timeline dt.changeset a {
- background-image: url(../changeset.png);
-}
-.timeline dt.newticket, .timeline dt.newticket a {
- background-image: url(../newticket.png);
-}
-.timeline dt.closedticket, .timeline dt.closedticket a {
- background-image: url(../closedticket.png);
-}
-.timeline dt.wiki, .timeline dt.wiki a {
- background-image: url(../wiki.png);
-}
-.timeline dt.milestone, .timeline dt.milestone a {
- background-image: url(../milestone.png);
-}
+dt.changeset, dt.changeset a { background-image: url(../changeset.png) }
+dt.newticket, dt.newticket a { background-image: url(../newticket.png) }
+dt.closedticket, dt.closedticket a { background-image: url(../closedticket.png) }
+dt.wiki, dt.wiki a { background-image: url(../wiki.png) }
+dt.milestone, dt.milestone a { background-image: url(../milestone.png) }
