--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -220,6 +220,28 @@ form.inline input { margin: 1em }
 #help :link, #help :visited { cursor: help }
 #help hr { display: none }
 
+/* Page preferences form */
+#prefs {
+ background: #f7f7f0;
+ border: 1px outset #998;
+ float: right;
+ font-size: 9px;
+ padding: .8em;
+ margin: 0 1em 1em;
+ width: 26em;
+}
+#prefs input, #prefs select { font-size: 9px; vertical-align: middle }
+#prefs fieldset { border: none; margin: .5em; padding: 0 }
+#prefs fieldset legend {
+ background: transparent;
+ color: #000;
+ font-size: 9px;
+ font-weight: normal;
+ margin: 0 0 0 -1.5em;
+ padding: 0;
+}
+#prefs .buttons { text-align: right }
+
 /* Wiki */
 a.missing:link,a.missing:visited { background: #fafaf0; color: #998 }
 a.missing:hover { color: #000; }
