Fix timeline icons disappearing on hover. Milestone icon now has a transparent background
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@872 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -13,7 +13,7 @@ dt em {
 }
 dt .time { color: #777 }
 dt :link, dt :visited {
- background: transparent 3px 50% no-repeat;
+ background: 3px 50% no-repeat;
  display: block;
  border: none;
  color: #000;
