* Allow retargeting of tickets to another milestone when a milestone is deleted  * Add help link to the milestone and roadmap views
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@874 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -61,6 +61,7 @@ legend {
 }
 form.inline { float: left }
 form.inline input { margin: 1em }
+label.disabled { color: #d7d7d7 }
 .att-label { float:left; width: 7em; text-align: right; margin-right: .5em; }
 .buttons { margin: .5em; }
 
