Scroll <pre> blocks if necessary. Fixes #703.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@876 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -295,10 +295,11 @@ table.listing tbody tr:hover { background: #eed }
 
 .wikipage p { margin-left: 1em }
 pre.wiki, pre.literal-block {
- margin: 1em 1.75em;
- padding: .25em;
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
+ margin: 1em 1.75em;
+ padding: .25em;
+ overflow: auto;
 }
 table.wiki {
  border: 2px solid #ccc;
