* Added an "underline" class to trac.css, closes #737.  * contrib/trac-post-commit-hook now recognizes the current db schema version, closes #751.  * Added a "css" processor to WikiFormatting.py, closes #759.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@920 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -21,6 +21,8 @@ img { border: none }
 
 .hide { display: none; }
 
+.underline { text-decoration: underline; }
+
 /* Link styles */
 :link, :visited {
  text-decoration: none;
