Added some more css to get rst enumerated lists to render properly, closes #721.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@921 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -23,6 +23,12 @@ img { border: none }
 
 .underline { text-decoration: underline; }
 
+OL.loweralpha { list-style-type: lower-alpha }
+OL.upperalpha { list-style-type: upper-alpha }
+OL.lowerroman { list-style-type: lower-roman }
+OL.upperroman { list-style-type: upper-roman }
+OL.arabic     { list-style-type: decimal }
+
 /* Link styles */
 :link, :visited {
  text-decoration: none;
